k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: esewa-namespace
spec:
  serviceName: "postgres-primary"
  replicas: 6
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: postgresql
        image: bitnami/postgresql:latest
        ports:
        - containerPort: 5432
          name: postgres
        command:
        - /bin/bash
        - -c
        - |
          if [[ $HOSTNAME == "postgres-0" ]]; then
            export POSTGRESQL_REPLICATION_MODE=master
          else
            export POSTGRESQL_REPLICATION_MODE=slave
          fi
          /opt/bitnami/scripts/postgresql/entrypoint.sh /opt/bitnami/scripts/postgresql/run.sh
        volumeMounts:
        - name: data
          mountPath: /bitnami/postgresql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
