k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esewa-ingress
  namespace: esewa-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "300"
spec:
  rules:
  - host: esewaprod.sudarshan-uprety.com.np
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esewa-service
            port:
              number: 80
